--- a/TimeSeries_Finance_Udemy_Course.ipynb
+++ b/TimeSeries_Finance_Udemy_Course.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TimeSeries_Finance_Udemy_Course.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNO33PKq+eKoakj1wgnl8dp",
+      "authorship_tag": "ABX9TyMi+I1NmrKyVGrSCDhh6Xze",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "bOwj5JNKBalI",
         "colab_type": "code",
-        "outputId": "2e697eee-5b79-4e98-bc8e-bd2cc88a646b",
+        "outputId": "b3af5f87-80bc-4e2b-bb74-8da5971feffe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 181
@@ -58,7 +58,7 @@
             "  Downloading https://files.pythonhosted.org/packages/4d/0f/32b991b05f392ca2f86587972f5d94d86ea7d6fdb659a607c52a67dbcfcd/ppscore-0.0.2.tar.gz\n",
             "Building wheels for collected packages: ppscore\n",
             "  Building wheel for ppscore (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for ppscore: filename=ppscore-0.0.2-py2.py3-none-any.whl size=9629 sha256=b9d409461b19d483241b8314abefb7006d2914b78c70ab078843f2d236d2a0e5\n",
+            "  Created wheel for ppscore: filename=ppscore-0.0.2-py2.py3-none-any.whl size=9629 sha256=ea2d912afaa67450b3b72b41a12fe8653b79fb7f18083ce0666529422672ed19\n",
             "  Stored in directory: /root/.cache/pip/wheels/29/32/a2/82782fc09f5cd68e401ff047201d38af8965fb94984db18aa5\n",
             "Successfully built ppscore\n",
             "Installing collected packages: ppscore\n",
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "-ieCCM8iGiaM",
         "colab_type": "code",
-        "outputId": "da0434a5-8404-4bfe-b7fe-1a4e67ab1fc0",
+        "outputId": "cd6a67ca-755b-4ed3-dce3-f691078acb77",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "P-hDbGEV99i-",
         "colab_type": "code",
-        "outputId": "f07bb20a-1c39-4d0a-e64d-ca35e8cf75d4",
+        "outputId": "e1839d02-616f-4913-a2ec-a65364d6088c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
@@ -453,7 +453,7 @@
       "metadata": {
         "id": "YZy3Xpzy5-Ok",
         "colab_type": "code",
-        "outputId": "11ed6cc6-9041-461c-f352-eceaa2adec12",
+        "outputId": "83e84cc1-3214-4fdb-921a-610d67e0322d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
@@ -479,7 +479,7 @@
       "metadata": {
         "id": "h5vtZq4c6hWn",
         "colab_type": "code",
-        "outputId": "ae016c96-26fb-4e5d-c543-7ed4d343eef8",
+        "outputId": "1e933ec7-b34a-4791-ffdc-1f43e150d219",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
@@ -655,7 +655,7 @@
       "metadata": {
         "id": "v8JdOOPfw1Si",
         "colab_type": "code",
-        "outputId": "59050e8e-8ac4-4823-e65a-2a5b80465daa",
+        "outputId": "2bc2f479-2e72-42f4-824f-54c026588470",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 331
@@ -859,7 +859,7 @@
       "metadata": {
         "id": "cwUTs9tCx9Zg",
         "colab_type": "code",
-        "outputId": "1d14c31f-fcd2-4c7b-ce15-0f10074be42b",
+        "outputId": "152c3211-4a18-4e62-a949-84a4392d7446",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 253
@@ -924,7 +924,7 @@
       "metadata": {
         "id": "lLV9HskLESe_",
         "colab_type": "code",
-        "outputId": "4f3704d8-ec0f-4a37-999f-63c53f4b71b7",
+        "outputId": "8c2ed05f-21eb-4891-c5c8-7a6df8f20434",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 253
@@ -966,7 +966,7 @@
       "metadata": {
         "id": "80mruXXZE23g",
         "colab_type": "code",
-        "outputId": "3ce789f9-e0f9-4c24-9e0b-8c4f039b4a8f",
+        "outputId": "4e16809b-3f25-4aa5-a2e0-03cc08ba618b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 352
@@ -981,7 +981,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f1fd174a2e8>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f048bf41320>"
             ]
           },
           "metadata": {
@@ -1009,7 +1009,7 @@
       "metadata": {
         "id": "acbCCMFWEZwX",
         "colab_type": "code",
-        "outputId": "4a938fe5-6641-4402-eb7a-bf92b9a37bd2",
+        "outputId": "d48921ce-fc56-4a9a-f275-6c2bdd882adb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 352
@@ -1024,7 +1024,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f1fd164a780>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f048be47b00>"
             ]
           },
           "metadata": {
@@ -1052,7 +1052,7 @@
       "metadata": {
         "id": "op8Yhf_AFx-E",
         "colab_type": "code",
-        "outputId": "1318a861-df14-49f5-b016-d57a31a07c5e",
+        "outputId": "c9464020-35e5-48a3-d57c-01abe7e4a706",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 352
@@ -1067,7 +1067,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f1fd111aeb8>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f048b91bef0>"
             ]
           },
           "metadata": {
@@ -1095,7 +1095,7 @@
       "metadata": {
         "id": "fhYFiIfWF3AW",
         "colab_type": "code",
-        "outputId": "ddfb26ee-db39-43df-ff58-c34752c5df57",
+        "outputId": "d5bb1afd-778a-4e68-c271-528bd30e8311",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 352
@@ -1110,7 +1110,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f1fd108d2b0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f048b8a54e0>"
             ]
           },
           "metadata": {
@@ -1138,7 +1138,7 @@
       "metadata": {
         "id": "E4pXstVaGDBn",
         "colab_type": "code",
-        "outputId": "11ab9af4-8e49-4129-93bd-3b4082ec76c2",
+        "outputId": "61b45a22-c239-47eb-953a-de7439b9c892",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 352
@@ -1153,7 +1153,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f1fd0fd2860>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f048b7ca8d0>"
             ]
           },
           "metadata": {
@@ -1181,7 +1181,7 @@
       "metadata": {
         "id": "8tMXn0x7HGm8",
         "colab_type": "code",
-        "outputId": "c3389255-2fd0-4fc6-cdb9-d7aeee0a75ef",
+        "outputId": "92d6017d-a2e1-4cd8-9e38-219e8097f6b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 347
@@ -1196,7 +1196,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f1fd0f65278>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f048b769780>"
             ]
           },
           "metadata": {
@@ -1224,7 +1224,7 @@
       "metadata": {
         "id": "HrIvkJVoHnOT",
         "colab_type": "code",
-        "outputId": "a6c954e2-99fc-4b93-b37d-fe9906a015c8",
+        "outputId": "b3ccc72d-13fb-4ed8-af11-8b44a5a08bd0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 352
@@ -1293,7 +1293,7 @@
       "metadata": {
         "id": "LREbVN49JPmy",
         "colab_type": "code",
-        "outputId": "4534e0eb-965c-4f3e-8079-80973afee39b",
+        "outputId": "8e9e65f2-3df9-464c-a074-18c85194ebb5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -1325,16 +1325,16 @@
       "metadata": {
         "id": "I0DDV8nvh19N",
         "colab_type": "code",
+        "outputId": "8ad0743f-f2c7-4dbb-cb54-bbd080cd4e62",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 162
-        },
-        "outputId": "c2f47ace-faed-412a-f1e0-59ef968c7035"
+        }
       },
       "source": [
         "df.index"
       ],
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1353,7 +1353,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 19
         }
       ]
     },
@@ -1385,16 +1385,16 @@
       "metadata": {
         "id": "DiZ7CEmxjHz7",
         "colab_type": "code",
+        "outputId": "a9b55141-0c39-43c4-bab7-2cd960186a51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 426
-        },
-        "outputId": "7a932f75-e672-4a33-b5b5-b903ae2764ee"
+        }
       },
       "source": [
         "df.head(10)"
       ],
-      "execution_count": 27,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1632,14 +1632,240 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 21
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jdumUccNlaIP",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Missing Values"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "YF-qqC55jWXN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 253
+        },
+        "outputId": "aed3afb5-7331-4ed0-81d5-2de957ff69b6"
+      },
+      "source": [
+        "df.isna().sum()"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Adj Close  ^BSESN       0\n",
+              "           ^FTSE        0\n",
+              "           ^GDAXI       0\n",
+              "           ^GSPC        0\n",
+              "           ^N225        0\n",
+              "           ^NSEI        0\n",
+              "Volume     ^BSESN     301\n",
+              "           ^FTSE      182\n",
+              "           ^GDAXI     148\n",
+              "           ^GSPC      191\n",
+              "           ^N225      323\n",
+              "           ^NSEI     2226\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2eCsEWT1lzUV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df['Adj Close', '^BSESN'] = df['Adj Close', '^BSESN'].fillna(method='ffill')\n",
+        "df['Adj Close', '^FTSE'] = df['Adj Close', '^FTSE'].fillna(method='ffill')\n",
+        "df['Adj Close', '^GDAXI'] = df['Adj Close', '^GDAXI'].fillna(method='ffill')\n",
+        "df['Adj Close', '^GSPC'] = df['Adj Close', '^GSPC'].fillna(method='ffill')\n",
+        "df['Adj Close', '^N225'] = df['Adj Close', '^N225'].fillna(method='ffill')\n",
+        "df['Adj Close', '^NSEI'] = df['Adj Close', '^NSEI'].fillna(method='ffill')\n",
+        "\n",
+        "df['Adj Close', '^N225'] = df['Adj Close', '^N225'].fillna(method='bfill')\n",
+        "df['Adj Close', '^NSEI'] = df['Adj Close', '^NSEI'].fillna(method='bfill')\n",
+        "df['Adj Close', '^FTSE'] = df['Adj Close', '^FTSE'].fillna(method='bfill')\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z5a7-RxCnGMN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_proc = df['Adj Close', '^BSESN']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MSDS8NfMwX0u",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "de01458c-2ce8-4718-aec8-c11836824aa0"
+      },
+      "source": [
+        "df_proc.isna().sum()"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "90PXhloKxBBM",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Splitting the train and test data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "goXrKPSjwevY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "size = int(len(df_proc) * .08)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YenQd5AFxLCD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_train = df_proc.iloc[:size]\n",
+        "df_test = df_proc.iloc[size:]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3QrSBtySxUwA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        },
+        "outputId": "a5335e60-f2a4-4240-aad7-5a1072da2830"
+      },
+      "source": [
+        "df_train.tail()\n"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Date\n",
+              "2001-08-10    3316.209961\n",
+              "2001-08-13    3287.620117\n",
+              "2001-08-14    3331.889893\n",
+              "2001-08-15    3331.889893\n",
+              "2001-08-16    3337.909912\n",
+              "Freq: B, Name: (Adj Close, ^BSESN), dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ILZI9By7xciB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        },
+        "outputId": "11e8bd2e-c980-4a2f-9fac-ff279695d4a3"
+      },
+      "source": [
+        "df_test.head()"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Date\n",
+              "2001-08-17    3296.709961\n",
+              "2001-08-20    3278.919922\n",
+              "2001-08-21    3297.429932\n",
+              "2001-08-22    3297.429932\n",
+              "2001-08-23    3308.790039\n",
+              "Freq: B, Name: (Adj Close, ^BSESN), dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h01D-EkmxigL",
         "colab_type": "code",
         "colab": {}
       },
