--- a/TimeSeries_Finance_Udemy_Course.ipynb
+++ b/TimeSeries_Finance_Udemy_Course.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TimeSeries_Finance_Udemy_Course.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNPCmt9WL57O8I2QQNTjgzE",
+      "authorship_tag": "ABX9TyOKDLT/f1wa8IF7tp6KC+dO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1942,8 +1942,8 @@
         "test_stationarity(df_test)\n",
         "\n",
         "#Test Stat --> It should less than the 1%,5% or 10% Then we can say time series is stationary \n",
-        "#P-value --> \n",
-        "#No. of lags--> autocorrelation\n",
+        "#P-value --> value is the percentage of chance that data come from a stationary . here 70% chance that its a sationary\n",
+        "#No. of lags--> autocorrelation no autocorrelation no lags white noise will not have lags when we test adf test\n",
         "#No of observation --> Sum of lags and observation equal to total count in the dataset\n",
         "\n",
         "\n"
